# bayes-opt-particle-packing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  temp-plot.html
boppf/: __init__.py  boppf.py
boppf/tests/: test_particle_packing.py
boppf/utils/: ax.py  data.py  packing_generation.py  particle_packing.py  plotting.py  run_executable.py
data/: packing-fraction.csv
examples/: boppf_example.py  generate_test_set.py  log-normal.nb  log_normal_example.m  multi_fidelity_baseline_comparison.py  multi_fidelity_example.py  multi_fidelity_simple_example.py  packing_generation_submitit.py  paper_plotting.py  paper_results.py  paper_validation.py  paper_validation_plotting.py  plot_distribution_example.py  single_simulation.py  timing.py
figures/particles=1000/max_parallel=2/n_sobol=2,n_bayes=3/: pred_results.html
figures/particles=25000/max_parallel=5/n_sobol=10,n_bayes=90/: cv_results.html  cv_results_ttest.html  pred_results.html  pred_results_ttest.html  val_results.html  val_results_ttest.html
results/dummy/: experiment0.json  results0.csv
tables/: scaled_err_results.csv
tables/particles=1000/max_parallel=2/n_sobol=2,n_bayes=3/: main_df.csv  main_df.pkl  observed.json  predicted.json
tables/particles=25000/max_parallel=5/n_sobol=10,n_bayes=90/: best_pred_results.csv  main_df.csv  main_df.pkl  observed.json  predicted.json  (+3 more)
tables/particles=25000/max_parallel=8/: main_df.csv  main_df.pkl  val_results_particles=25000.csv  val_results_unrounded_particles=25000.csv
tests/: test_search_space_degeneracy.py  test_submode_0.py
(+3255 files in other folders)
