[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boppf"
authors = [{name = "Sterling G. Baird", email = "sterling.baird@utah.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

dependencies = ["ax-platform", "pyro-ppl", "ray[tune]", "tqdm", "psutil", "kaleido"]

requires-python = ">=3.7,<3.10"

[project.urls]
Home = "https://github.com/sparks-baird/boppf"